<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.task.notes.data.model.NotesDataModel" />

        <variable
            name="listener"
            type="com.task.notes.ui.noteslist.NotesListAdapter.NoteItemListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/note_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="true"
        android:minHeight="@dimen/_90sdp"
        android:onClick="@{()->listener.onNotesClicked()}"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:fontFamily="@font/outfit_semibold"
                android:gravity="start"
                android:maxLines="2"
                android:text="@{model.title}"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/note_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@{model.description}"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toTopOf="@+id/note_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_title"
                app:layout_constraintVertical_bias="0.58000004"
                tools:text="@string/description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:text="@{model.content}"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_title"
                app:layout_constraintVertical_bias="0.72"
                tools:text="@string/content_default_preview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
